# readme-agent

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
agent/: file_utils.py  github_client.py  llm_client.py  nodes.py  prompts.py
github/: pr_creator.py  repository_cloner.py
llm/: file_analyzer.py
scanner/: file_scanner.py
src/github/: repo_manager.py
src/llm/: config.py  file_analyzer.py  prompt_manager.py  readme_creator.py
src/scanner/: config.py  file_scanner.py
tests/: test_file_scanner.py  test_file_utils.py  test_github_client.py  test_llm_client.py  test_nodes.py  test_prompt_manager.py  test_repo_manager.py
